wip: fix modal scrollbar

--- a/src/components/modal/z-modal/styles.css
+++ b/src/components/modal/z-modal/styles.css
@@ -105,12 +105,12 @@
 .modal-container main::-webkit-scrollbar {
   background: linear-gradient(
     to right,
-    var(--color-white) 0 3px,
+    transparent 0 3px,
     var(--gray200) 3px 7px,
-    var(--color-white) 7px 10px
+    transparent 7px 10px
   );
-  border-radius: var(--border-radius);
   width: 10px;
+  border-radius: var(--border-radius);
 }
 
 .modal-container main::-webkit-scrollbar-track {
@@ -121,6 +121,10 @@
   background-color: var(--color-primary01);
   border-radius: var(--border-radius);
   width: 10px;
+}
+
+.modal-container main::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-hover-primary);
 }
 
 /* Firefox */
